--- a/templates/error.html
+++ b/templates/error.html
@@ -14,7 +14,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
-      background: url("{{ url_for('static', filename='IMAGES/GoldXBG.png') }}") no-repeat center center / cover;
+      background: url("{{ url_for('static', filename='images/GoldXBG.png') }}") no-repeat center center / cover;
       color: #fff;
       height: 100vh;
       display: flex;
@@ -120,7 +120,7 @@
   <a href="javascript:history.back()" class="back-arrow">‹</a>
 
   <!-- Logo -->
-  <img src="{{ url_for('static', filename='IMAGES/lil_Pie_logo.png') }}" alt="Pie AI Logo" class="logo">
+  <img src="{{ url_for('static', filename='images/lil_Pie_logo.png') }}" alt="Pie AI Logo" class="logo">
 
   <!-- Error Text -->
   <div class="error-text">
@@ -129,7 +129,7 @@
 
   <!-- Sad Face -->
   <div class="sad-face">
-    <img src="{{ url_for('static', filename='IMAGES/xx(face.png') }}" alt="Sad Face Icon">
+    <img src="{{ url_for('static', filename='images/xx(face.png') }}" alt="Sad Face Icon">
   </div>
   <p>This page is currently not available</p>
 </body>
