--- a/templates/error.html
+++ b/templates/error.html
@@ -120,7 +120,7 @@
   <a href="javascript:history.back()" class="back-arrow">‹</a>
 
   <!-- Logo -->
-  <img src="{{ url_for('static', filename='images/lil_Pie_logo.png') }}" alt="Pie AI Logo" class="logo">
+  <img src="{{ url_for('static', filename='images/lil_pie_logo.png') }}" alt="Pie AI Logo" class="logo">
 
   <!-- Error Text -->
   <div class="error-text">
@@ -129,7 +129,7 @@
 
   <!-- Sad Face -->
   <div class="sad-face">
-    <img src="{{ url_for('static', filename='images/xx(face.png') }}" alt="Sad Face Icon">
+    <img src="{{ url_for('static', filename='images/xxface.png') }}" alt="Sad Face Icon">
   </div>
   <p>This page is currently not available</p>
 </body>
