--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -14,7 +14,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Lustria', serif;
-      background: url("{{ url_for('static', filename='images/GoldXBG.png') }}") no-repeat center center / cover;
+      background: url("{{ url_for('static', filename='images/goldxbg.png') }}") no-repeat center center / cover;
       color: #fff;
       height: 100vh;
       display: flex;
@@ -71,7 +71,7 @@
 </head>
 
 <body>
-  <img src="{{ url_for('static', filename='images/lil_Pie_logo.png') }}" alt="Pie AI Logo" class="logo">
+  <img src="{{ url_for('static', filename='images/lil_pie_logo.png') }}" alt="Pie AI Logo" class="logo">
 
   <h1>Thank You</h1>
 
