--- a/templates/links.html
+++ b/templates/links.html
@@ -15,7 +15,7 @@
     body {
       font-family: 'Poppins', sans-serif;
       color: #fff;
-      background: url("{{ url_for('static', filename='images/GoldXBG.png') }}") no-repeat center center / cover;
+      background: url("{{ url_for('static', filename='images/goldxbg.png') }}") no-repeat center center / cover;
       height: 100vh;
       display: flex;
       flex-direction: column;
@@ -86,7 +86,7 @@
 </head>
 
 <body>
-  <img src="{{ url_for('static', filename='images/lil_Pie_logo.png') }}" alt="Pie AI Logo" class="link-logo">
+  <img src="{{ url_for('static', filename='images/lil_pie_logo.png') }}" alt="Pie AI Logo" class="link-logo">
 
   <h1>Keep connected with us<br>at Nexus 33</h1>
 
